# NCA-Playground

./: Cargo.toml  README.md  presets.json  settings.json
assets/shaders/: draw.wgsl  nca.wgsl
src/: camera.rs  lib.rs  main.rs
src/nca/: input.rs  mod.rs  utils.rs
src/nca/nca_control/: mod.rs  presets.rs  settings.rs
src/nca/pipeline/: draw.rs  mod.rs  nca.rs
src/nca/ui/: draw.rs  mod.rs  nca.rs
