[package]
authors = ["Maximilian Mühlbauer <maximilian.muehlbauer@proton.me>"]
name = "nca_playground"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto           = true

[dependencies]
bevy = "0.14"
bevy_egui = "0.28"
bytemuck = "1.16.3"
dialog = "0.3"
image = "0.25"
rand = "0.8.3"
serde = "1.0"
serde_json = "1.0"
